styles.css
* {
    font-family: sans-serif;
}

.hero {
    display: flex;
    flex-direction: column;
    padding: 15px 15%;
    gap: 24px;
    color: rgb(216, 226, 235);
}

.header {
    display: flex;
    align-items: center;
}

ul {
    margin: 0 0 0 auto;
    padding: 0;
    display: flex;
    list-style-type: none;
    gap: 8px;
}

.logo {
    width: 50px;
}

.content {
    display: flex;
    gap: 48px;
}

.right img {
    width: 75%;
}

.left, .right {
    flex: 1 1 0;
    height: 50%
}

.left {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

h1 {
    margin: 0;
}

.right {
    text-align: end;
}

#btn-1 {
    background-color: #3882f6;
    border: none;
    border-radius: 8px;
    color: white;
    padding: 6px 24px;
}

h1 {
    color: rgb(255, 255, 255);
}

.content {
    display: flex;
    flex-direction: column;
    text-align: center;
}

.block-container {
    display: flex;
    justify-content: space-around;
    gap: 15%;
    padding: 0 30%
}

.info {
    display: flex;
    flex-direction: column;
}

.info > img {
    border: 5px solid #3882f6;
    border-radius: 10px
}

.quote {
    background-color: rgb(190, 189, 189);
    text-align: center;
    color: rgb(240, 240, 240);
    padding: 3% 0;
}

.bold {
    margin-left: 8em;
    margin-top: 1em;
    font-weight: bold;
    color: rgb(56, 56, 56)
}

.italic {
    font-style: italic;
}

.cta-container {
    align-self: center;
    background-color: #4f8ff7;
    padding: 1.2em 5em;
    border-radius: 12px;
    min-width: 50%;
    display: flex;
    color: white;
}

.cta {
    font-size: 24px;
    font-weight: bold;
}

#btn-2 {
    padding: 0.5em;
    background-color: #4f8ff7;
    border: 2px solid white;
    border-radius: 5px;
    color:azure
}

.button-container {
    margin: auto 0 auto auto;
}

.footer, .hero {
    background-color: #04213af1;
}

.footer {
    color: white;
    text-align: center;
    padding: 1em;
    margin-top: 3em;
}

